2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/56_if_avec_str.deca
// Description :
//     test de ifThenElse avec string  
// Resultats :
//    Erreur Contexteulle : ligne 10 : le type attendu est boolean
//
// Historique :
// cree le 10/01/2024

{
    if("bonjour")
    {

    }
}